--- a/Mise en forme.ipynb
+++ b/Mise en forme.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "source": [
     "# Libraries\r\n",
     "\r\n",
@@ -56,11 +56,15 @@
     "    with open(os.path.join(\"API_key\", \"key.yaml\"), 'r') as stream:\r\n",
     "        OMDb_key = yaml.safe_load(stream)\r\n",
     "\r\n",
+    "#########################################################################################################\r\n",
+    "# OMDb call function\r\n",
     "# * Don't forget to put your API key in API_Key/key.yaml\r\n",
+    "\r\n",
     "def getOMDbMovieData(_df, filename_csv=\"df_omdb.csv\"):\r\n",
     "    api_call = requests.get(\"http://www.omdbapi.com/?apikey=\"+OMDb_key+\"&i=\"+_df[\"tconst\"]+\"&plot=full\")\r\n",
     "    if api_call.json()[\"Response\"]==\"True\":\r\n",
-    "        # Some movies are wrongly labelled \"episode\" on OMDb\r\n",
+    "        # Some movies are wrongly (?) labelled \"episode\" and \"game\" on OMDb\r\n",
+    "        # I'll trust IMDb \"titleType\" variable\r\n",
     "        assert api_call.json()[\"Type\"] in ['movie', 'series', 'episode', 'game'], \"Type not movie, series or episode\"\r\n",
     "        if api_call.json()[\"Type\"]==\"movie\":\r\n",
     "            _df[\"api_title\"]=api_call.json()[\"Title\"]\r\n",
@@ -109,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "source": [
     "# Downloading dfs\r\n",
     "for file_name in [\"name.basics.tsv\", \"title.akas.tsv\", \"title.basics.tsv\", \r\n",
@@ -159,7 +163,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# Memory hungry:\r\n",
+    "# Import all csv\r\n",
+    "# I'll launch this when I get a 32Gb RAM.\r\n",
     "\r\n",
     "# for df in [\"name.basics.tsv\", \"title.akas.tsv\", \"title.basics.tsv\", \r\n",
     "# \"title.crew.tsv\", \"title.episode.tsv\", \"title.principals.tsv\", \"title.ratings.tsv\"]:\r\n",
@@ -1932,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
     "# Df\r\n",
     "df = pd.read_table(\r\n",
@@ -2029,7 +2034,29 @@
     "\r\n",
     "del musicvideos, tvepisodes, videogames, shorts, tvSpecial\r\n",
     "\r\n",
-    "print(\"Final df size:\", len(df))"
+    "print(\"Final df size:\", len(df))\r\n",
+    "\r\n",
+    "# Last few variables: mainstream (15% of films with the most votes) + log_numVotes\r\n",
+    "# Deleted endYear -> not used.\r\n",
+    "\r\n",
+    "# Mainstream variable threshold\r\n",
+    "print(\"Mainstream variable threshold:\", df[\"numVotes\"].quantile(q=0.85), \"votes\")\r\n",
+    "df = (\r\n",
+    "    df.assign(\r\n",
+    "        ## Variable \"mainstream/obscur\"\r\n",
+    "        mainstream=lambda x: (\r\n",
+    "            np.where(x[\"numVotes\"] >= x[\"numVotes\"].quantile(q=0.85), 1, 0)\r\n",
+    "        ),\r\n",
+    "        log_numVotes=lambda x: np.log(x[\"numVotes\"]),\r\n",
+    "    )\r\n",
+    "    .drop(columns=[\"endYear\"])\r\n",
+    "    ## those 0 votes should be NaN (it's because I used fillna(0) earlier)\r\n",
+    "    .replace({\"sumVotes_crew\": 0}, np.NaN)\r\n",
+    "    .reset_index(drop=True)\r\n",
+    ")\r\n",
+    "\r\n",
+    "df.to_csv(os.path.join(\"Data\", \"Modified\", \"imdb_main_vars.csv\"))\r\n",
+    "print(\"Saved to\", os.path.join(\"Data\", \"Modified\", \"imdb_main_vars.csv\"))"
    ],
    "outputs": [
     {
@@ -2469,45 +2496,9 @@
       "tvShort           2213\n",
       "Name: titleType, dtype: int64\n",
       "Deleted types: musicvideos, tvepisodes, videogames, shorts, tvSpecial\n",
-      "Final df size: 448997\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "# Last few variables: mainstream (15% of films with the most votes) + log_numVotes\r\n",
-    "# Deleted endYear -> not used.\r\n",
-    "\r\n",
-    "# Mainstream variable threshold\r\n",
-    "print(\"Mainstream variable threshold:\", df[\"numVotes\"].quantile(q=0.85), \"votes\")\r\n",
-    "df = (\r\n",
-    "    df.assign(\r\n",
-    "        ## Variable \"mainstream/obscur\"\r\n",
-    "        mainstream=lambda x: (\r\n",
-    "            np.where(x[\"numVotes\"] >= x[\"numVotes\"].quantile(q=0.85), 1, 0)\r\n",
-    "        ),\r\n",
-    "        log_numVotes=lambda x: np.log(x[\"numVotes\"]),\r\n",
-    "    )\r\n",
-    "    .drop(columns=[\"endYear\"])\r\n",
-    "    ## those 0 votes should be NaN (it's because I used fillna(0) earlier)\r\n",
-    "    .replace({\"sumVotes_crew\": 0}, np.NaN)\r\n",
-    "    .reset_index(drop=True)\r\n",
-    ")\r\n",
-    "\r\n",
-    "df.to_csv(os.path.join(\"Data\", \"Final\", \"imdb.csv\"))\r\n",
-    "print(\"Saved to\", os.path.join(\"Data\", \"Final\", \"imdb.csv\"))"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
+      "Final df size: 448997\n",
       "Mainstream variable threshold: 462.0 votes\n",
-      "Saved to Data\\Final\\imdb.csv\n"
+      "Saved to Data\\Modified\\imdb_main_vars.csv\n"
      ]
     }
    ],
@@ -2522,7 +2513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "source": [
     "df = df.reset_index().loc[:,[\"tconst\", \"primaryTitle\"]]\r\n",
     "\r\n",
@@ -2536,15 +2527,8 @@
     "df_day4_2 = df.iloc[350000:400000]\r\n",
     "df_day5_1 = df.iloc[400000:450000]\r\n",
     "\r\n",
-    "del df"
+    "# del df"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "source": [],
    "outputs": [],
    "metadata": {}
   },
@@ -2623,88 +2607,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "source": [
-    "tmp = pd.read_csv(os.path.join(\"Data\", \"Modified\", \"day3_2.csv\"))\r\n",
-    "# tmp2 = df_day2_2.iloc[33410:]"
+    "\r\n",
+    "# * Launched 01/07/2021, 19:25\r\n",
+    "# ! tt1928243 tt2091413 tt2091423 error\r\n",
+    "df_day4_1 = df_day4_1.drop(df_day4_1.loc[df_day4_1[\"tconst\"].isin([\"tt1928243\", \"tt2091413\", \"tt2091423\"])].index).apply(getOMDbMovieData, axis=1, **{'filename_csv':\"day4_1.csv\"})"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "source": [
-    "tmp2 = df_day3_1.iloc[9953:]"
+    "\r\n",
+    "# * Launched 04/07/2021\r\n",
+    "# ! tt4601148 error. \r\n",
+    "# I actually wonder why I get this error. Sometimes it seems to works if I wait for a bit?\r\n",
+    "df_day4_2 = df_day4_2.drop(df_day4_2.loc[df_day4_2[\"tconst\"]==\"tt4601148\"].index).apply(getOMDbMovieData, axis=1, **{'filename_csv':\"day4_2.csv\"})"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "source": [
-    "df_day3_1 = df_day3_1.iloc[9953:]"
+    "\r\n",
+    "# * Launched 04/07/2021\r\n",
+    "df_day5_1 = df_day5_1.drop(df_day5_1.loc[df_day5_1[\"tconst\"].isin([\"tt5967998\", \"tt6959402\", \"tt6984724\"])].index).apply(getOMDbMovieData, axis=1, **{'filename_csv':\"day5_1.csv\"})"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "source": [
-    "req = requests.get(\"http://www.omdbapi.com/?apikey=1fee7b28&i=tt0420900&plot=full\")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "source": [
-    "req.json()"
+    "df_day5_1.iloc[0]"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'Title': 'Shinseiki evangelion: Koutetsu no girlfriend',\n",
-       " 'Year': '1998',\n",
-       " 'Rated': 'N/A',\n",
-       " 'Released': '16 Apr 1998',\n",
-       " 'Runtime': 'N/A',\n",
-       " 'Genre': 'Adventure',\n",
-       " 'Director': 'N/A',\n",
-       " 'Writer': 'N/A',\n",
-       " 'Actors': 'Megumi Hayashibara, Tetsuya Iwanaga, Junko Iwao, Motomu Kiyokawa',\n",
-       " 'Plot': 'N/A',\n",
-       " 'Language': 'Japanese',\n",
-       " 'Country': 'Japan',\n",
-       " 'Awards': 'N/A',\n",
-       " 'Poster': 'N/A',\n",
-       " 'Ratings': [{'Source': 'Internet Movie Database', 'Value': '7.6/10'}],\n",
-       " 'Metascore': 'N/A',\n",
-       " 'imdbRating': '7.6',\n",
-       " 'imdbVotes': '40',\n",
-       " 'imdbID': 'tt0420900',\n",
-       " 'Type': 'game',\n",
-       " 'DVD': 'N/A',\n",
-       " 'BoxOffice': 'N/A',\n",
-       " 'Production': 'N/A',\n",
-       " 'Website': 'N/A',\n",
-       " 'Response': 'True'}"
+       "tconst               tt6984724\n",
+       "primaryTitle    Oru Mugathirai\n",
+       "Name: 417356, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 44
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "source": [
+    "tmp = pd.read_csv(os.path.join(\"Data\", \"Modified\", \"day5_1.csv\"))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "source": [
+    "df_day5_1 = df_day5_1.iloc[len(tmp):]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "# Merging OMDb data with imdb_main_vars to create final dataframe\r\n",
+    "df = (\r\n",
+    "    pd.read_csv(os.path.join(\"Data\", \"Modified\", \"imdb_main_vars.csv\"))\r\n",
+    "    # Get descriptions\r\n",
+    "    .merge(\r\n",
+    "        right=pd.concat(\r\n",
+    "            [\r\n",
+    "                pd.read_csv(os.path.join(\"Data\", \"Modified\", file))\r\n",
+    "                .drop_duplicates()\r\n",
+    "                .drop(\r\n",
+    "                    columns=[\"primaryTitle\", \"api_title\"]\r\n",
+    "                )  # There are a few duplicates here and there. Oops.\r\n",
+    "                for file in os.listdir(os.path.join(\"Data\", \"Modified\"))\r\n",
+    "                if file.startswith(\"day\")\r\n",
+    "            ],\r\n",
+    "            axis=0,\r\n",
+    "        ).assign(\r\n",
+    "            # Cleaning language variable (deleting a lot of \"None\")\r\n",
+    "            language=lambda x: x[\"language\"]\r\n",
+    "            .str.replace(\"None, |, None\", \"\", regex=True)\r\n",
+    "            .replace(\"None\", np.NaN)\r\n",
+    "        ),\r\n",
+    "        on=\"tconst\",\r\n",
+    "        how=\"left\",\r\n",
+    "    )\r\n",
+    "    # Get names of crew\r\n",
+    "    .merge(\r\n",
+    "        pd.read_feather(os.path.join(\"Data\", \"Modified\", \"crew.names.feather\")),\r\n",
+    "        on=\"tconst\",\r\n",
+    "        how=\"left\",\r\n",
+    "    )\r\n",
+    "    # Names = Vector with all names\r\n",
+    "    # awards_nom_or_won = binary. 1 if the field was nominated for an award, or if it has won one.\r\n",
+    "    # awards_won = binary. 1 if the film has won an award\r\n",
+    "    # all_texts = dump of the genres, countries, languages, crew names, and plot of the film\r\n",
+    "    .assign(\r\n",
+    "        Names=lambda x: x[\"names_Actors\"].fillna(\"\")\r\n",
+    "        + \", \"\r\n",
+    "        + x[\"names_Director\"].fillna(\"\")\r\n",
+    "        + \", \"\r\n",
+    "        + x[\"names_Others\"].fillna(\"\"),\r\n",
+    "        awards_nom_or_won=lambda x: np.where(\r\n",
+    "            x[\"awards\"].notna(), \"Nominated or won awards\", \"No awards\"\r\n",
+    "        ),\r\n",
+    "        awards_won=lambda x: np.where(\r\n",
+    "            x[\"awards\"].fillna(\"\").str.lower().str.contains(\"win|won\", regex=True),\r\n",
+    "            \"Awards won\",\r\n",
+    "            \"No awards won\",\r\n",
+    "        ),\r\n",
+    "        all_texts=lambda x: x[\"genres\"].fillna(\"\").str.replace(\",\", \" \")\r\n",
+    "        + \" \"\r\n",
+    "        + x[\"country\"].fillna(\"\").str.replace(\",\", \" \")\r\n",
+    "        + \" \"\r\n",
+    "        + x[\"language\"].fillna(\"\").str.replace(\",\", \" \")\r\n",
+    "        + \" \"\r\n",
+    "        + x[\"Names\"].fillna(\"\").str.replace(\",\", \" \")\r\n",
+    "        + \" \"\r\n",
+    "        + x[\"plot\"].fillna(\"\"),\r\n",
+    "    ).drop(columns=[\"Unnamed: 0\"])\r\n",
+    ")\r\n",
+    "\r\n",
+    "print(\"Df length with descriptions:\", len(df))\r\n",
+    "print(\r\n",
+    "    \"Df length full:\",\r\n",
+    "    len(df.dropna(axis=0, how=\"any\", subset=[\"plot\"])),\r\n",
+    ")\r\n",
+    "print(\r\n",
+    "    \"Films with descriptions:\",\r\n",
+    "    round((len(df.dropna(axis=0, how=\"any\", subset=[\"plot\"])) / len(df)) * 100, 2),\r\n",
+    "    \"%\",\r\n",
+    "    sep=\"\",\r\n",
+    ")\r\n",
+    "\r\n",
+    "# Final df\r\n",
+    "df.to_csv(os.path.join(\"Data\", \"Final\", \"imdb.csv\"))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Df length with descriptions: 448997\n",
+      "Df length full: 298597\n",
+      "Films with descriptions:66.5%\n"
+     ]
     }
    ],
    "metadata": {}
