--- a/Wrangling.ipynb
+++ b/Wrangling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "# Libraries\r\n",
     "\r\n",
@@ -155,7 +155,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Data Wrangling"
+    "---\r\n",
+    "## Data Wrangling\r\n",
+    "---"
    ],
    "metadata": {}
   },
@@ -164,7 +166,6 @@
    "execution_count": null,
    "source": [
     "# Import all csv\r\n",
-    "# I'll launch this when I get a 32Gb RAM.\r\n",
     "\r\n",
     "# for df in [\"name.basics.tsv\", \"title.akas.tsv\", \"title.basics.tsv\", \r\n",
     "# \"title.crew.tsv\", \"title.episode.tsv\", \"title.principals.tsv\", \"title.ratings.tsv\"]:\r\n",
@@ -177,7 +178,9 @@
   {
    "cell_type": "markdown",
    "source": [
+    "---\r\n",
     "### name.basics\r\n",
+    "---\r\n",
     "\r\n",
     "Used variables: \r\n",
     "* sumVotes: sum of votes of the 4 main films a person has participated in\r\n",
@@ -698,7 +701,9 @@
   {
    "cell_type": "markdown",
    "source": [
+    "---\r\n",
     "### title_akas\r\n",
+    "---\r\n",
     "\r\n",
     "New used vars:\r\n",
     "* Number of different titles (across geographical regions) for the film\r\n",
@@ -879,7 +884,9 @@
   {
    "cell_type": "markdown",
    "source": [
+    "---\r\n",
     "### title.crew\r\n",
+    "---\r\n",
     "\r\n",
     "No new vars. À importer dans df principal ?\r\n",
     "\r\n",
@@ -1003,7 +1010,9 @@
   {
    "cell_type": "markdown",
    "source": [
+    "---\r\n",
     "### title.episode\r\n",
+    "---\r\n",
     "\r\n",
     "Rien d'utilisé dans le df. Potentiellement le nombre de saisons, si je travaille uniquement sur des séries.\r\n",
     "\r\n",
@@ -1137,7 +1146,9 @@
   {
    "cell_type": "markdown",
    "source": [
+    "---\r\n",
     "### title.principals\r\n",
+    "---\r\n",
     "\r\n",
     "    title.principals.tsv.gz – Contains the principal cast/crew for titles\r\n",
     "\r\n",
@@ -1918,7 +1929,9 @@
   {
    "cell_type": "markdown",
    "source": [
+    "---\r\n",
     "### Final dataframe\r\n",
+    "---\r\n",
     "\r\n",
     "#### title.basics\r\n",
     "    title.basics.tsv.gz - Contains the following information for titles:\r\n",
@@ -1937,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "source": [
     "# Df\r\n",
     "df = pd.read_table(\r\n",
@@ -2507,13 +2520,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Get movies descriptions from OMDb"
+    "#### Get movies descriptions from OMDb\r\n",
+    "\r\n",
+    "At the time of writing, this df has a around 450K observations. If somehow you launch this in the future, the number of observations is likely to be (a lot?) bigger, so you will have to adjust the code accordingly. I admit this could be automated better, but I did not want to spend too much time on this."
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "source": [
     "df = df.reset_index().loc[:,[\"tconst\", \"primaryTitle\"]]\r\n",
     "\r\n",
@@ -2536,7 +2551,6 @@
    "cell_type": "code",
    "execution_count": 47,
    "source": [
-    "\r\n",
     "# * Launched 26/06/2021, 15:47\r\n",
     "df_day1_1 = df_day1_1.apply(getOMDbMovieData,axis=1, **{'filename_csv':\"day1_1.csv\"})"
    ],
@@ -2547,7 +2561,6 @@
    "cell_type": "code",
    "execution_count": 79,
    "source": [
-    "\r\n",
     "# * Launched 26/06/2021, 21:10 \r\n",
     "# ! JSON error with tconst tt0120690\r\n",
     "# ! I have no idea what to do. I'll skip this one.\r\n",
@@ -2560,7 +2573,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "\r\n",
     "# * Launched 28/06/2021, 10:31\r\n",
     "df_day2_1 = df_day2_1.apply(getOMDbMovieData, axis=1, **{'filename_csv':\"day2_1.csv\"})"
    ],
@@ -2571,7 +2583,6 @@
    "cell_type": "code",
    "execution_count": 8,
    "source": [
-    "\r\n",
     "# * Launched 27/06/2021, 09:02\r\n",
     "# ! removed tt0420900 because it's a visual novel\r\n",
     "# (also because it's Evangelion; I bought the box set when I was 14 since a friend couldn't stop talking about it, but I found it boring.\r\n",
@@ -2585,7 +2596,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "\r\n",
     "# * Launched 28/06/2021, 10:31\r\n",
     "# ! tt0815143 error\r\n",
     "df_day3_1 = df_day3_1.drop(df_day3_1.loc[df_day3_1[\"tconst\"]==\"tt0815143\"].index).apply(getOMDbMovieData, axis=1, **{'filename_csv':\"day3_1.csv\"})"
@@ -2597,7 +2607,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "\r\n",
     "# * Launched 30/06/2021, 19:42\r\n",
     "# ! tt1350496 error\r\n",
     "df_day3_2 = df_day3_2.drop(df_day3_2.loc[df_day3_2[\"tconst\"]==\"tt1350496\"].index).apply(getOMDbMovieData, axis=1, **{'filename_csv':\"day3_2.csv\"})"
@@ -2609,7 +2618,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "source": [
-    "\r\n",
     "# * Launched 01/07/2021, 19:25\r\n",
     "# ! tt1928243 tt2091413 tt2091423 error\r\n",
     "df_day4_1 = df_day4_1.drop(df_day4_1.loc[df_day4_1[\"tconst\"].isin([\"tt1928243\", \"tt2091413\", \"tt2091423\"])].index).apply(getOMDbMovieData, axis=1, **{'filename_csv':\"day4_1.csv\"})"
@@ -2621,7 +2629,6 @@
    "cell_type": "code",
    "execution_count": 10,
    "source": [
-    "\r\n",
     "# * Launched 04/07/2021\r\n",
     "# ! tt4601148 error. \r\n",
     "# I actually wonder why I get this error. Sometimes it seems to works if I wait for a bit?\r\n",
@@ -2632,9 +2639,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "source": [
-    "\r\n",
     "# * Launched 04/07/2021\r\n",
     "df_day5_1 = df_day5_1.drop(df_day5_1.loc[df_day5_1[\"tconst\"].isin([\"tt5967998\", \"tt6959402\", \"tt6984724\"])].index).apply(getOMDbMovieData, axis=1, **{'filename_csv':\"day5_1.csv\"})"
    ],
@@ -2643,47 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "source": [
-    "df_day5_1.iloc[0]"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "tconst               tt6984724\n",
-       "primaryTitle    Oru Mugathirai\n",
-       "Name: 417356, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 44
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "source": [
-    "tmp = pd.read_csv(os.path.join(\"Data\", \"Modified\", \"day5_1.csv\"))"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "source": [
-    "df_day5_1 = df_day5_1.iloc[len(tmp):]"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "source": [
     "# Merging OMDb data with imdb_main_vars to create final dataframe\r\n",
     "df = (\r\n",
@@ -2746,9 +2712,9 @@
     "    ).drop(columns=[\"Unnamed: 0\"])\r\n",
     ")\r\n",
     "\r\n",
-    "print(\"Df length with descriptions:\", len(df))\r\n",
+    "print(\"Df length full:\", len(df))\r\n",
     "print(\r\n",
-    "    \"Df length full:\",\r\n",
+    "    \"Df length with descriptions:\",\r\n",
     "    len(df.dropna(axis=0, how=\"any\", subset=[\"plot\"])),\r\n",
     ")\r\n",
     "print(\r\n",
@@ -2766,9 +2732,9 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Df length with descriptions: 448997\n",
-      "Df length full: 298597\n",
-      "Films with descriptions:66.5%\n"
+      "Df length full: 448997\n",
+      "Df length with descriptions: 312152\n",
+      "Films with descriptions:69.52%\n"
      ]
     }
    ],
