--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -51,25 +51,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 315,
    "source": [
+    "##############################################################\r\n",
     "# Dependencies\r\n",
     "\r\n",
+    "# Text\r\n",
+    "import string\r\n",
+    "import nltk\r\n",
+    "\r\n",
+    "# Wrangling\r\n",
     "import pandas as pd\r\n",
-    "import numpy as np\r\n",
     "import sks_functions as sks\r\n",
     "\r\n",
     "# Stats\r\n",
+    "import numpy as np\r\n",
     "from scipy import stats\r\n",
     "from statsmodels.stats.weightstats import DescrStatsW\r\n",
     "import statsmodels.formula.api as sms\r\n",
     "import statsmodels.api as sm\r\n",
     "\r\n",
     "# Sklearn\r\n",
+    "## NLP\r\n",
     "from sklearn.feature_extraction.text import CountVectorizer\r\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\r\n",
     "\r\n",
     "# Display\r\n",
     "from IPython.core import display as ICD\r\n",
+    "## Progress bars! (super useful)\r\n",
+    "## https://stackoverflow.com/questions/18603270/progress-indicator-during-pandas-operations\r\n",
+    "import tqdm\r\n",
     "\r\n",
     "# Graphs\r\n",
     "import matplotlib.pyplot as plt\r\n",
@@ -80,9 +91,70 @@
     "import plotly.graph_objects as go\r\n",
     "import plotly.express as px\r\n",
     "import plotly.io as pio\r\n",
-    "pio.templates.default = \"plotly_dark\""
+    "pio.templates.default = \"plotly_dark\"\r\n",
+    "\r\n",
+    "# Text\r\n",
+    "import nltk\r\n",
+    "## Stemmer/Lemmatizer\r\n",
+    "PorterStemmer = nltk.stem.PorterStemmer()\r\n",
+    "WordNetLemmatizer = nltk.stem.WordNetLemmatizer()\r\n",
+    "\r\n",
+    "## Stop_words\r\n",
+    "stop_words = nltk.corpus.stopwords.words('english')\r\n",
+    "stop_words.extend([\"\"])\r\n",
+    "\r\n",
+    "###################################################################\r\n",
+    "# FUNCTIONS\r\n",
+    "\r\n",
+    "## Get POS tags for WordNet\r\n",
+    "\r\n",
+    "### This retrieves the part-of-speech tags from this webpage https://www.ling.upenn.edu/courses/Fall_2003/ling001/penn_treebank_pos.html \r\n",
+    "### I put the equivalent tag for the WordNet lemmatizer in the \"WordNetPOS\" column, and then put all this in a dictionary.\r\n",
+    "WordNetPOSDict = pd.read_html(\"https://www.ling.upenn.edu/courses/Fall_2003/ling001/penn_treebank_pos.html\")[0].iloc[1:,1:].rename(columns={1:\"Tag\", 2:\"Name\"}).assign(\r\n",
+    "    # First letter of the Penn Treebank Projct tab\r\n",
+    "    Tag_firstletter=lambda x: x[\"Tag\"].str[0],\r\n",
+    "    # N* are nouns, V* are verbs, J* are adjectives, R* are adverbs. Other letters will be considered as nouns for WordNet.\r\n",
+    "    WordNetPOS=lambda x: np.select(\r\n",
+    "        condlist = [\r\n",
+    "            (x[\"Tag_firstletter\"]==\"N\") | ~(x[\"Tag_firstletter\"].isin([\"N\", \"V\", \"J\", \"R\"])),\r\n",
+    "            x[\"Tag_firstletter\"]==\"V\",\r\n",
+    "            x[\"Tag_firstletter\"]==\"J\",\r\n",
+    "            x[\"Tag_firstletter\"]==\"R\",\r\n",
+    "        ],\r\n",
+    "        choicelist = \r\n",
+    "        [\r\n",
+    "            nltk.corpus.wordnet.NOUN,\r\n",
+    "            nltk.corpus.wordnet.VERB, \r\n",
+    "            nltk.corpus.wordnet.ADJ,\r\n",
+    "            nltk.corpus.wordnet.ADV\r\n",
+    "        ]\r\n",
+    "    )\r\n",
+    ").set_index(\"Tag\").loc[:,\"WordNetPOS\"].to_dict()\r\n",
+    "### Alternative, if the website is down:\r\n",
+    "### WordNetPOSDict = {'CC': 'n', 'CD': 'n', 'DT': 'n', 'EX': 'n', 'FW': 'n', 'IN': 'n', 'JJ': 'a', 'JJR': 'a', 'JJS': 'a', 'LS': 'n', 'MD': 'n', 'NN': 'n', 'NNS': 'n', 'NNP': 'n', 'NNPS': 'n', 'PDT': 'n', 'POS': 'n', 'PRP': 'n', 'PRP$': 'n', 'RB': 'r', 'RBR': 'r', 'RBS': 'r', 'RP': 'r', 'SYM': 'n', 'TO': 'n', 'UH': 'n', 'VB': 'v', 'VBD': 'v', 'VBG': 'v', 'VBN': 'v', 'VBP': 'v', 'VBZ': 'v', 'WDT': 'n', 'WP': 'n', 'WP$': 'n', 'WRB': 'n'}\r\n",
+    "print(\"Penn Treebank part-of-speech tag ==> WordNet part-of-speech tag:\\n\", WordNetPOSDict, sep=\"\")\r\n",
+    "\r\n",
+    "\r\n",
+    "def get_wordnet_pos(word, Penn_dictionary):\r\n",
+    "    '''\r\n",
+    "    Yields a POS tag for a word (i.e. if it is a verb, a noun...) to be used with WordNet Lemmatizer\r\n",
+    "    Initially inspired from: https://stackoverflow.com/questions/15586721/wordnet-lemmatization-and-pos-tagging-in-python\r\n",
+    "    But they use a if-else statement, which is not as good as a dictionary.\r\n",
+    "\r\n",
+    "    Penn_dictionary must be a dictionnary. The key is the tag from the Penn Treebank Project, and the value must be its equivalent tag from nltk.corpus.wordnet (like nltk.corpus.wordnet.NOUN)\r\n",
+    "    '''\r\n",
+    "    return Penn_dictionary[nltk.tag.pos_tag([word])[0][1]]"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Penn Treebank part-of-speech tag ==> WordNet part-of-speech tag:\n",
+      "{'CC': 'n', 'CD': 'n', 'DT': 'n', 'EX': 'n', 'FW': 'n', 'IN': 'n', 'JJ': 'a', 'JJR': 'a', 'JJS': 'a', 'LS': 'n', 'MD': 'n', 'NN': 'n', 'NNS': 'n', 'NNP': 'n', 'NNPS': 'n', 'PDT': 'n', 'POS': 'n', 'PRP': 'n', 'PRP$': 'n', 'RB': 'r', 'RBR': 'r', 'RBS': 'r', 'RP': 'r', 'SYM': 'n', 'TO': 'n', 'UH': 'n', 'VB': 'v', 'VBD': 'v', 'VBG': 'v', 'VBN': 'v', 'VBP': 'v', 'VBZ': 'v', 'WDT': 'n', 'WP': 'n', 'WP$': 'n', 'WRB': 'n'}\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -98,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 310,
    "source": [
     "plotly_renderer = \"svg\"\r\n",
     "# plotly_renderer = \"notebook\""
@@ -117,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 303,
    "source": [
     "###########################################\r\n",
     "# Import data\r\n",
@@ -5607,6 +5679,54 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# NLP"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Clustering on TF-IDF"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The lemmatizer is quite slow. I wrote the lemmatized vector of plot descriptions to a .csv. Use it if you want to avoid waiting an hour for the lemmatization to finish."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "source": [
+    "# Good discussion about the performance of various ways to remove words/punctuation\r\n",
+    "# I use the worst one. Well.\r\n",
+    "# https://stackoverflow.com/questions/50444346/fast-punctuation-removal-with-pandas\r\n",
+    "\r\n",
+    "# WordNet: \r\n",
+    "# [WordNetLemmatizer.lemmatize(word, get_wordnet_pos(word, WordNetPOSDict)) for word in x.split()]\r\n",
+    "# Porter: \r\n",
+    "# [PorterStemmer.stem(word) for word in x.split()]\r\n",
+    "\r\n",
+    "df_desc = df_desc.assign(\r\n",
+    "    plot=df_desc[\"plot\"]\r\n",
+    "    .str.lower()\r\n",
+    "    .str.replace(r\"\\b(?:{})\\b\".format(\"|\".join(stop_words)), \"\", regex=True) # Deleting stop words (! do it before deleting punctuation, there's punctuation in the stop words)\r\n",
+    "    .str.replace(r\"[^\\w\\s]+\", \"\", regex=True) # Deleting punctuation\r\n",
+    "    .progress_apply(lambda x: ' '.join([WordNetLemmatizer.lemmatize(word, get_wordnet_pos(word, WordNetPOSDict)) for word in x.split()])) # Lemmatization\r\n",
+    "    # WordNet needs a \"part-of-speech tag\" to properly lemmatize. It doesn't apply the same modification to a verb and to a noun. get_wordnet_pos() retrieves the correct part-of-speech tag for each word.\r\n",
+    "    # The lemmatizer is a bit slow (slower than PorterStemmer, at least), because the get_wordnet_pos function calls nltk.tag.pos_tag().\r\n",
+    ")\r\n",
+    "df_desc.loc[:,[\"tconst\", \"plot\"]].rename(columns={\"plot\":\"plot_lemmatized\"}).to_csv(os.path.join(\"Data\", \"Final\", \"lemmatized_descriptions.csv\"))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "# Appendix"
    ],
    "metadata": {}
@@ -5614,7 +5734,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Graph PowerPoint"
+    "## Graph PowerPoint\r\n",
+    "\r\n",
+    "Some graph I made for a PowerPoint presentation. It's the number of movies produced per year."
    ],
    "metadata": {}
   },
