--- a/Wrangling.ipynb
+++ b/Wrangling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "# Libraries\r\n",
     "\r\n",
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "# Df\r\n",
     "df = pd.read_table(\r\n",
@@ -2702,11 +2702,11 @@
     "        ),\r\n",
     "        all_texts=lambda x: x[\"genres\"].fillna(\"\").str.replace(\",\", \" \")\r\n",
     "        + \" \"\r\n",
-    "        + x[\"country\"].fillna(\"\").str.replace(\",\", \" \")\r\n",
+    "        + x[\"country\"].fillna(\"\").str.replace(\" \", \"\").str.replace(\",\", \" \")\r\n",
     "        + \" \"\r\n",
-    "        + x[\"language\"].fillna(\"\").str.replace(\",\", \" \")\r\n",
+    "        + x[\"language\"].fillna(\"\").str.replace(\" \", \"\").str.replace(\",\", \" \")\r\n",
     "        + \" \"\r\n",
-    "        + x[\"Names\"].fillna(\"\").str.replace(\",\", \" \")\r\n",
+    "        + x[\"Names\"].fillna(\"\").str.replace(\" \", \"\").str.replace(\",\", \" \")\r\n",
     "        + \" \"\r\n",
     "        + x[\"plot\"].fillna(\"\"),\r\n",
     "    ).drop(columns=[\"Unnamed: 0\"])\r\n",
