--- a/Wrangling.ipynb
+++ b/Wrangling.ipynb
@@ -2522,7 +2522,7 @@
    "source": [
     "#### Get movies descriptions from OMDb\r\n",
     "\r\n",
-    "At the time of writing, this df has a around 450K observations. If somehow you launch this in the future, the number of observations is likely to be (a lot?) bigger, so you will have to adjust the code accordingly. I admit this could be automated better, but I did not want to spend too much time on this."
+    "At the time of writing, this df has around 450K observations. If somehow you launch this in the future, the number of observations is likely to be (a lot?) bigger, so you will have to adjust the code accordingly. I admit this could be automated better, but I did not want to spend too much time on this."
    ],
    "metadata": {}
   },
