Even newer analyses

--- a/Wrangling.ipynb
+++ b/Wrangling.ipynb
@@ -208,6 +208,7 @@
     "        usecols=[\"nconst\", \"primaryName\", \"primaryProfession\", \"knownForTitles\"],\r\n",
     "    )\r\n",
     "    .loc[lambda x: x[\"primaryProfession\"].notna() | x[\"knownForTitles\"].notna(), :]\r\n",
+    "    # I don't really use those variables, actually\r\n",
     "    .assign(\r\n",
     "        **{\r\n",
     "            \"Profession1\": (\r\n",
@@ -888,7 +889,7 @@
     "### title.crew\r\n",
     "---\r\n",
     "\r\n",
-    "No new vars. À importer dans df principal ?\r\n",
+    "Not used.\r\n",
     "\r\n",
     "    title.crew.tsv.gz – Contains the director and writer information for all the titles in IMDb. Fields include:\r\n",
     "\r\n",
@@ -1014,7 +1015,7 @@
     "### title.episode\r\n",
     "---\r\n",
     "\r\n",
-    "Rien d'utilisé dans le df. Potentiellement le nombre de saisons, si je travaille uniquement sur des séries.\r\n",
+    "Used to create the number of seasons for series.\r\n",
     "\r\n",
     "    title.episode.tsv.gz – Contains the tv episode information. Fields include:\r\n",
     "\r\n",
@@ -1128,6 +1129,7 @@
    "cell_type": "code",
    "execution_count": 94,
    "source": [
+    "# Keep the max number of seasons, for each series.\r\n",
     "title_episode = title_episode.groupby(\"parentTconst\").agg(maxSeason=(\"seasonNumber\", \"max\"))\r\n",
     "title_episode.reset_index().to_feather(os.path.join(\"Data\", \"Modified\", \"series.seasons.feather\"))"
    ],
@@ -1285,16 +1287,6 @@
     "    how=\"left\",\r\n",
     "    on=\"tconst\"\r\n",
     ")"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "source": [
-    "# TEST TEST\r\n",
-    "# tmp = title_principals.sort_values(\"tconst\").iloc[35000000:35001000]"
    ],
    "outputs": [],
    "metadata": {}
@@ -1976,7 +1968,7 @@
     "]  # drop null average ratings\r\n",
     "print(\"Nrows data after null ratings deletion:\", len(df))\r\n",
     "\r\n",
-    "# Merge with number of titles\r\n",
+    "# Merge with number of titles (in different languages) for each movie\r\n",
     "df = pd.merge(\r\n",
     "    df,\r\n",
     "    pd.read_feather(os.path.join(\"Data\", \"Modified\", \"ntitles.feather\")).rename(\r\n",
@@ -2654,7 +2646,7 @@
     "# Merging OMDb data with imdb_main_vars to create final dataframe\r\n",
     "df = (\r\n",
     "    pd.read_csv(os.path.join(\"Data\", \"Modified\", \"imdb_main_vars.csv\"))\r\n",
-    "    # Get descriptions\r\n",
+    "    # Get descriptions of the plot for each film\r\n",
     "    .merge(\r\n",
     "        right=pd.concat(\r\n",
     "            [\r\n",
@@ -2662,7 +2654,7 @@
     "                .drop_duplicates()\r\n",
     "                .drop(\r\n",
     "                    columns=[\"primaryTitle\", \"api_title\"]\r\n",
-    "                )  # There are a few duplicates here and there. Oops.\r\n",
+    "                )  # There are a few duplicates here and there. Oops.  I deleted them\r\n",
     "                for file in os.listdir(os.path.join(\"Data\", \"Modified\"))\r\n",
     "                if file.startswith(\"day\")\r\n",
     "            ],\r\n",
@@ -2676,13 +2668,14 @@
     "        on=\"tconst\",\r\n",
     "        how=\"left\",\r\n",
     "    )\r\n",
-    "    # Get names of crew\r\n",
+    "    # Get names of all the film crew\r\n",
     "    .merge(\r\n",
     "        pd.read_feather(os.path.join(\"Data\", \"Modified\", \"crew.names.feather\")),\r\n",
     "        on=\"tconst\",\r\n",
     "        how=\"left\",\r\n",
     "    )\r\n",
-    "    # Names = Vector with all names\r\n",
+    "    # Some new variables:\r\n",
+    "    # Names = Vector with all names (actors + directors + others)\r\n",
     "    # awards_nom_or_won = binary. 1 if the field was nominated for an award, or if it has won one.\r\n",
     "    # awards_won = binary. 1 if the film has won an award\r\n",
     "    # all_texts = dump of the genres, countries, languages, crew names, and plot of the film\r\n",
